# Multiagent

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  test_db.py  test_remoteok.py
backend/app/: database.py  main.py
backend/app/agents/: __init__.py  apply_agent.py  calendar_agent.py  digest_agent.py  email_agent.py  github_agent.py  interview_agent.py  jb_analyzer_agent.py  job_alert_agent.py  job_classifier_agent.py  job_collector_agent.py  job_matcher_agent.py  learning_agent.py  linkedin_content_agent.py  networking_agent.py  news_agent.py  outreach_manager.py  portfolio_agent.py  research_agent.py  resume_tailor_agent.py
backend/app/agents/base/: __init__.py  agent.py  agent_registry.py  agent_state.py
backend/app/agents/orchestrator/: __init__.py  master_orchestrator.py
backend/app/application/: __init__.py
backend/app/application/dependencies/: __init__.py  auth.py  container.py
backend/app/application/schemas/: __init__.py  agent_schemas.py  auth_schemas.py  common.py  job_schemas.py  profile_schemas.py  resume_schemas.py  user_schemas.py
backend/app/application/services/: agent_orchestration_service.py  audit_service.py  auth_service.py  job_service.py  metrics_service.py  profile_service.py  resume_service.py  user_service.py
backend/app/collectors/: base.py  remoteok.py  remotive.py  wellfound.py
backend/app/core/: __init__.py  config.py  constants.py  exceptions.py  kernel.py  logging.py  retry.py  security.py
backend/app/dependencies/: auth.py
backend/app/domain/: __init__.py
backend/app/domain/events/: __init__.py  base.py  career_events.py  profile_events.py  system_events.py
backend/app/domain/models/: __init__.py  agent_state.py  application.py  audit_log.py  calendar.py  content.py  digest.py  email.py  interview.py  job.py  knowledge.py  learning_plan.py  networking.py  portfolio.py  profile.py  resume.py  user.py
backend/app/domain/repositories/: __init__.py  agent_state_repository.py  application_repository.py  audit_repository.py  base.py  calendar_repository.py  content_repository.py  digest_repository.py  email_repository.py  interview_repository.py  job_repository.py  knowledge_repository.py  learning_plan_repository.py  networking_repository.py  (+3 more)
backend/app/infrastructure/: __init__.py
backend/app/presentation/: __init__.py
backend/app/routers/: agent.py  auth.py  jobs.py  profile.py  resume.py  users.py
backend/app/schedulers/: scheduler.py
backend/app/schemas/: auth.py  profile.py  user.py
backend/app/services/: auth_service.py  job_service.py  profile_analyzer.py  profile_service.py  resume_parser_service.py  resume_service.py  user_service.py
backend/app/utils/: security.py
(+85 files in other folders)
