[project]
name = "job-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "apscheduler>=3.11.2",
    "bcrypt==4.0.1",
    "beautifulsoup4>=4.15.0",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pdfplumber>=0.11.10",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
