[project]
name = "paios"
version = "0.2.0"
description = "PAIOS — Personal AI Operating System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ── Web Framework ──────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # ── Database ───────────────────────────────────────────
    "motor>=3.7.0",
    "pymongo>=4.10.0",

    # ── Validation & Settings ──────────────────────────────
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # ── Security ───────────────────────────────────────────
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pyjwt>=2.9.0",
    "cryptography>=43.0.0",

    # ── HTTP Client ────────────────────────────────────────
    "httpx>=0.27.0",

    # ── Logging ────────────────────────────────────────────
    "structlog>=24.4.0",

    # ── File Handling ──────────────────────────────────────
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.12",
    "pdfplumber>=0.11.0",

    # ── HTML Parsing ───────────────────────────────────────
    "beautifulsoup4>=4.12.0",

    # ── Environment ────────────────────────────────────────
    "python-dotenv>=1.0.0",

    # ── Scheduling ─────────────────────────────────────────
    "apscheduler>=3.10.0",

    # ── Redis & Task Queue ─────────────────────────────────
    "redis>=5.0.0",
    "celery>=5.4.0",

    # ── Browser Automation ─────────────────────────────────
    "playwright>=1.49.0",

    # ── Vector Store ───────────────────────────────────────
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.7.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
